# 42_philosophers

./: LICENSE  README.md  a.out  test.c  toutV2.c
Infos/: Map.txt  divers.txt  doc.txt
PhiloV2/: Makefile  checker.py  main.c  text.txt
PhiloV2/include/: include.h  philosopher.h
PhiloV2/srcs/: 00_error.c  00_init.c  01_free.c  01_init.c  02_error.c  02_free.c  03_thread.c  04_routine.c  04_time.c  05_time.c  10_ft_atoi.c  10_ft_printf.c  11_checkint.c  12_ft_printf.c  13_messageprint.c
PhiloV2/test/: CMakeLists.txt  check_valgrind.py  clean.sh  test.sh  timeout_validator.py
PhiloV3/: Makefile  main.c
PhiloV3/includes/: get_current_time.c  philo.h
PhiloV3/srcs/: 00_init.c  01_free.c  02_printex.c  10_routine.c  11_eatandsleep.c  12_thinkanddeath.c
PhiloV4/: Makefile  main.c
PhiloV4/includes/: ft_atoi.c  get_current_time.c  philo.h
PhiloV4/srcs/: 00_init.c  01_free.c  02_printex.c  03_monitoring.c  10_routine.c  11_eatandsleep.c
Philosophers/: Makefile  main.c
Philosophers/Infos/: Map.txt
Philosophers/include/: include.h
Philosophers/srcs/00_base/: 00_error.c  00_free.c  00_init.c  error00.c  error01.c  free00.c  init00.c
Philosophers/srcs/01_argument/: 00_argument.c  01_checkint.c  argument00.c  argument01.c  philo_init00.c
Philosophers/srcs/02_action/: eat00.c
Philosophers/srcs/02_thread/: initthread00.c
Philosophers/srcs/03_routine/: routine00.c
Philosophers/srcs/utils/: checkint.c  ft_atoi.c  ft_memset.c  print_struct.c
finalphilo/: 00_utils.c  01_check.c  02_initandfree.c  main.c  philo.h
philo/: 00_utils.c  01_check.c  02_initandfree.c  03_routine.c  Makefile  main.c  philo  philo.h
philoV3/: Makefile  main.c
philoV3/include/: philo.h
philosopher/: 01_check.c  02_initandfree.c  03_routine.c  Makefile  main.c  philo.h
philosopher/include/: philo.h
philosopher/srcs/: 00_utils.c  01_init.c  02_free.c  03_print.c  10_routine.c  11_routine.c
